--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,10 +1,26 @@
 <div class="main-container">
   <div class="workout-container">
     <h1>Workouts</h1>
-    <mat-card class="workout-card" *ngFor="let workout of workouts">{{workout.name}}</mat-card>
+    <mat-card class="workout-card" *ngFor="let workout of workouts">
+      Name: {{workout.name}}
+      <hr>
+      Created By: {{workout.createdBy}}
+      <hr>
+      Exercises: <span *ngFor="let exercise of workout.exercises">{{getExerciseName(exercise)}} --> </span>
+    </mat-card>
   </div>
   <div class="exercises-container">
     <h1>Exercises</h1>
-    <mat-card class="exercises-card" *ngFor="let exercise of exercises">{{exercise.name}}</mat-card>
+    <mat-card class="exercises-card" *ngFor="let exercise of exercises">
+      Name: {{exercise.name}}
+      <hr>
+      Type: {{exercise.type}}
+      <hr>
+      Duration: {{exercise.duration}}
+      <hr>
+      Created By: {{exercise.createdBy}}
+      <hr>
+      Prep Time: {{exercise.prepDuration}}
+    </mat-card>
   </div>
 </div>
